@@ -98,6 +98,8 @@ namespace libtorrent
 
 		set.alert_queue_size = 100;
 
+		set.max_allowed_in_request_queue = 100;
+
 		// setting this to a low limit, means more
 		// peers are more likely to request from the
 		// same piece. Which means fewer partial
@@ -185,6 +187,9 @@ namespace libtorrent
 		// don't throttle TCP, assume there is
 		// plenty of bandwidth
 		set.mixed_mode_algorithm = session_settings::prefer_tcp;
+
+		set.max_allowed_in_request_queue = 2000;
+		set.max_out_request_queue = 1000;
 
 		// we will probably see a high rate of alerts, make it less
 		// likely to loose alerts
@@ -1179,8 +1184,8 @@ namespace libtorrent
 		, piece_timeout(20)
 		, request_timeout(50)
 		, request_queue_time(3)
-		, max_allowed_in_request_queue(250)
-		, max_out_request_queue(200)
+		, max_allowed_in_request_queue(500)
+		, max_out_request_queue(500)
 		, whole_pieces_threshold(20)
 		, peer_timeout(120)
 		, urlseed_timeout(20)
